--- a/views/properties/property_details.html
+++ b/views/properties/property_details.html
@@ -108,7 +108,7 @@
             <form class="inline-form" method="get"
                   action="/conversations/add/{{ property._id.toString() }}"
                   encType="multipart/form-data">
-                <button type="submit" class="btn btn-info"><span class="fas fa-comment-dots"></span>Contactar
+                <button type="submit" class="btn btn-secondary"><span class="fas fa-comment-dots"></span>Contactar
                 </button>
             </form>
         </div>
