--- a/views/properties/property_list.html
+++ b/views/properties/property_list.html
@@ -418,7 +418,7 @@
             </a>
             {% if user.permission == 'U' %}
             <div class="row">
-                <a type="button" class="centeredComponent btn btn-info"
+                <a type="button" class="centeredComponent btn btn-secondary"
                    href="/conversations/add/{{ property._id.toString() }}">Contactar <span
                         class="fas fa-comment-dots"></span></a>
             </div>
