--- a/views/info/info_contact.html
+++ b/views/info/info_contact.html
@@ -11,12 +11,11 @@
     <h1 class="sectionHeader">Información de Contacto</h1>
     <p>Si desea contactar con nosotros, le ofrecemos tres formas diferentes de hacerlo:</p>
     <ul class="listaInfo">
-        <li>Si el motivo de su contacto es la necesidad de información o tiene alguna duda respecto a alguna de las
-            propiedades ofertadas,
+        <li>Si el motivo de su contacto es la necesidad de información o tiene alguna duda respecto a alguna de los inmuebles ofertados,
             puede utilizar el propio chat del sistema. Para ello:
             <ol>
                 <li>Inicie sesión con su cuenta. Si no posee una cuenta, cree una primero.</li>
-                <li>Haga click en el botón "Contactar", junto al icono de un correo, debajo de la propiedad sobre la
+                <li>Haga click en el botón "Contactar", junto al icono de un correo, debajo del inmueble sobre el
                     cual desea información. Se abrirá su conversación.
                 </li>
                 <li>Rellene el campo con su mensaje y presione el botón "Enviar". Un agente le responderá lo antes
