--- a/views/info/info_statistics.html
+++ b/views/info/info_statistics.html
@@ -9,11 +9,11 @@
 </nav>
 <div class="container">
     <h1 class="sectionHeader">Estadísticas</h1>
-    <h2 class="sectionHeader">Propiedades Seguidas por sus Clientes</h2>
+    <h2 class="sectionHeader">Inmuebles Seguidos por sus Clientes</h2>
     <div class="row">
         <canvas class="canvas-line" id="myChart"></canvas>
     </div>
-    <h2 class="sectionHeader">Según el Tipo de Propiedad</h2>
+    <h2 class="sectionHeader">Según el Tipo de Inmueble</h2>
     <div class="row">
         <div class="col-6">
             <h3 id="headerMonth" class="sectionHeader"></h3>
