--- a/views/properties/property_details.html
+++ b/views/properties/property_details.html
@@ -6,7 +6,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/">Inicio</a></li>
-        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/properties/{{property.type}}">Propiedades</a></li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/properties/{{property.type}}">Inmuebles</a></li>
         <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Detalles</li>
     </ol>
 </nav>
@@ -222,7 +222,7 @@
     </div>
     <div id="divMapNotLoaded" class="div-field form-row" style="display: none;">
         <div class="alert alert-dark col-md-12" role="alert">
-            Esta propiedad no ha podido ser localizada en el mapa. Sentimos las molestias.
+            Este inmueble no ha podido ser localizado en el mapa. Sentimos las molestias.
         </div>
     </div>
 
