--- a/views/properties/property_list.html
+++ b/views/properties/property_list.html
@@ -4,19 +4,19 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/">Inicio</a></li>
-        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Propiedades</li>
+        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Inmuebles</li>
     </ol>
 </nav>
 
 <div class="container">
-    <h1 class="sectionHeader">Propiedades Disponibles</h1>
+    <h1 class="sectionHeader">Inmuebles Disponibles</h1>
 
     <div class="headerButtonOverview card-header">
         <h2 class="mb-0">
             <button id="btnExpandFilter" type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                     data-target="#propertyFilter"
                     aria-expanded="false" aria-controls="propertyFilter">
-                <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Propiedades</span>
+                <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Inmuebles</span>
             </button>
         </h2>
     </div>
