--- a/views/properties/property_myproperties.html
+++ b/views/properties/property_myproperties.html
@@ -4,18 +4,18 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/">Inicio</a></li>
-        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Mis Propiedades</li>
+        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Mis Inmuebles</li>
     </ol>
 </nav>
 <div class="container">
-    <h1 class="sectionHeader">Propiedades Publicadas</h1>
+    <h1 class="sectionHeader">Inmuebles Publicados</h1>
 
     <div class="headerButtonOverview card-header">
         <h2 class="mb-0">
             <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
                     data-target="#myPropertiesFilter"
                     aria-expanded="false" aria-controls="myPropertiesFilter">
-                <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Propiedades</span>
+                <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Inmuebles</span>
             </button>
         </h2>
     </div>
@@ -79,9 +79,9 @@
                 <th scope="col-md-2">Nombre</th>
                 <th scope="col-md-1">Tipo</th>
                 <th scope="col-md-2">Precio</th>
-                <th class="header-fixed">Modificar Propiedad</th>
-                <th class="header-fixed">Ver Propiedad</th>
-                <th class="header-fixed">Eliminar Propiedad</th>
+                <th class="header-fixed">Modificar Inmueble</th>
+                <th class="header-fixed">Ver Inmueble</th>
+                <th class="header-fixed">Eliminar Inmueble</th>
             </tr>
             </thead>
             <tbody>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="row">
-        <a href="/properties/add" role="button" class="btnSiguiente btn btn-success btn-lg btn-block">Agregar propiedad</a>
+        <a href="/properties/add" role="button" class="btnSiguiente btn btn-success btn-lg btn-block">Agregar Inmueble</a>
     </div>
 
 
