--- a/views/wishes/wishes_mywishes.html
+++ b/views/wishes/wishes_mywishes.html
@@ -18,8 +18,8 @@
                 <th scope="col">Tipo</th>
                 <th scope="col">Tipo De Operación</th>
                 <th scope="col">Precio</th>
-                <th scope="col" class="header-fixed">Ver Propiedad</th>
-                <th scope="col" class="header-fixed">Eliminar Propiedad</th>
+                <th scope="col" class="header-fixed">Ver Inmueble</th>
+                <th scope="col" class="header-fixed">Eliminar Inmueble</th>
             </tr>
             </thead>
             <tbody>
