Algoritmo de encriptacion potente (ahora si)

--- a/views/agents/agent_modify.html
+++ b/views/agents/agent_modify.html
@@ -31,7 +31,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
             <div class="col-sm-12">
-                <input id="password" type="password" class="form-control"  name="password" value="{{agent.password}}"
+                <input id="password" type="password" class="form-control"  name="password" value="{{agent.passwordD}}"
                        placeholder="Contraseña" required="true" minlength="8" maxlength="100"/>
             </div>
         </div>
