--- a/views/properties/property_add.html
+++ b/views/properties/property_add.html
@@ -101,7 +101,7 @@
             </div>
             <div id='divAddress' class="div-field form-row">
                 <div class="form-group col-sm-9">
-                    <label class="control-label" for="address">Dirección (Solo Calle y Portal):</label>
+                    <label class="control-label" for="address">Dirección:</label>
                     <div>
                         <input id='address' type="text" class="form-control" name="address"
                                placeholder="Ej. Avenida/Portal/Escalera/Piso"
