--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -16,56 +16,26 @@
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="name" name="name" placeholder="Nombre del Usuario"
-                       value="{{ user.name }}" maxlength="20" minlength="2" required="true"/>
+                       value="{{ userN.name }}" maxlength="20" minlength="2" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="surname" name="surname" placeholder="Apellidos del Usuario"
-                       value="{{ user.surname }}" maxlength="50" minlength="8" required="true"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="oldPassword">Contraseña Actual:</label>
-            <div class="col-sm-10">
-                <input id="oldPassword" type="password" class="form-control" name="oldPassword"
-                       maxlength="50" minlength="8" required="true"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
-            <div class="col-sm-10">
-                <input id="password" type="password" class="form-control" name="password"
-                       maxlength="50" minlength="8"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-3" for="passwordR">Repetir Nueva Contraseña:</label>
-            <div class="col-sm-10">
-                <input id="passwordR" type="password" class="form-control" name="passwordR"
-                       maxlength="50" minlength="8"/>
+                       value="{{ userN.surname }}" maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button id="confirmEditProfile" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Modificar Perfil</button>
+                <button id="confirmEditProfile" type="submit"
+                        class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Modificar Perfil
+                </button>
             </div>
         </div>
         <p id="message"></p>
     </form>
 
-    <script type="text/javascript">
-        $(function () {
-            $('#passwordR').keyup(function () {
-                if ($('#password').val() != $('#passwordR').val()) {
-                    $('#message').html('Las contraseñas no coinciden').css('color', 'red');
-                } else {
-                    $('#message').html('Las contraseñas coinciden!').css('color', 'green');
-                }
-            });
-        });
-    </script>
 </div>
 
 {% endblock %}
