--- a/views/users/user_signin.html
+++ b/views/users/user_signin.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="email">Email:</label>
+            <label class="control-label col-sm-10" for="email">Email <i>(Tendrá que confirmar la dirección de correo electrónico)</i>:</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" id="email" name="email"
                        placeholder="email@email.com" required="true" minlength="8" maxlength="50"/>
