--- a/views/users/user_modify_password.html
+++ b/views/users/user_modify_password.html
@@ -10,31 +10,31 @@
     </ol>
 </nav>
 <div class="container">
-    <h1 class="sectionHeader">Editar Perfil</h1>
+    <h1 class="sectionHeader">Modificar Contraseña</h1>
     <form class="form-horizontal" method="post" action="/users/password/edit" encType="multipart/form-data">
         <div class="form-group">
-            <label class="control-label col-sm-10" for="oldPassword">Contraseña Actual <i>(Obligatorio)</i>:</label>
-            <div class="col-sm-10">
+            <label class="control-label col-sm-12" for="oldPassword">Contraseña Actual <i>(Obligatorio)</i>:</label>
+            <div class="col-sm-12">
                 <input id="oldPassword" type="password" class="form-control" name="oldPassword"
                        maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input id="password" type="password" class="form-control" name="password"
                        maxlength="50" minlength="8"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="passwordR">Repetir Nueva Contraseña:</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input id="passwordR" type="password" class="form-control" name="passwordR"
                        maxlength="50" minlength="8"/>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="col-sm-offset-2 col-sm-12">
                 <button id="confirmEditProfile" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Modificar Contraseña</button>
             </div>
         </div>
