Actualizacion pruebas de integracion

--- a/views/properties/property_add.html
+++ b/views/properties/property_add.html
@@ -892,7 +892,7 @@
 
                 $("#type").val(type);
                 adjustProgressBar(25)
-                setHeader("Añada la información de el Inmueble.");
+                setHeader("Añada la información del Inmueble.");
             }
 
             function phase2() {
