--- a/views/properties/property_modify.html
+++ b/views/properties/property_modify.html
@@ -972,7 +972,7 @@
                 $('#divOwner').hide();
                 $('#divPictures').hide();
 
-                setHeader("Edite la información del Inmuebles.");
+                setHeader("Edite la información del Inmueble.");
             }
 
             function phase2() {
@@ -1020,7 +1020,7 @@
                 $('#divOwner').hide();
                 $('#divPictures').show();
 
-                setHeader("Introduzca las nuevas imágenes.");
+                setHeader("Introduzca las imágenes.");
             }
 
             function phase4() {
