--- a/views/properties/property_myproperties.html
+++ b/views/properties/property_myproperties.html
@@ -10,6 +10,10 @@
 <div class="container">
     <h1 class="sectionHeader">Inmuebles Publicados</h1>
 
+    {% if properties.length == 0 %}
+    <h2 class="sectionHeader">En este momento no hay inmuebles disponibles. </h2>
+    {% else %}
+
     <div class="headerButtonOverview card-header">
         <h2 class="mb-0">
             <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
@@ -128,6 +132,8 @@
             </script>
         </ul>
     </div>
+
+    {% endif %}
 
     <div class="row">
         <a href="/properties/add" role="button" class="btnSiguiente btn btn-success btn-lg btn-block">Agregar Inmueble</a>
